--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity;
+@using Databases_2_Project2_Grocery_store.Models;
 
 @inject SignInManager<Person> SignInManager
 @inject UserManager<Person> UserManager
