Main point of project done, might add a few tweaks later

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,5 +4,10 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p style="text-align:left;">
+        This website is designed for displaying local grocery's store product. <br />
+        If you register / log in you can create / edit / delete products. <br />
+        I also wanted to add roles (employee/client/loyalty program client) but I have no time for now because I need to do other courses' projects as well. <br />
+        Also you can't change your name / surname in account page as for now for exact same reason. But I might add it in near future.
+    </p>
 </div>
