--- a/Views/Products/Index.cshtml
+++ b/Views/Products/Index.cshtml
@@ -1,15 +1,20 @@
 ﻿@model IEnumerable<Databases_2_Project2_Grocery_store.Models.Product>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Products";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Products</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.Identity.IsAuthenticated)
+{
+    <p>
+        <a asp-action="Create">Create New Product</a> |
+        <a asp-action="CreateDrink">Create new drink</a> |
+        <a asp-action="CreateFood">Create new food</a>
+    </p>
+}
 @Html.DropDownList("Type", new SelectListItem[] {
     new SelectListItem() { Text = "Select Type", Value = "" },
     new SelectListItem() { Text = "All", Value = "All" },
@@ -20,7 +25,7 @@ new { onchange = $"document.location.href = '/Products?sortOrder={ViewBag.NextSo
     <thead>
         <tr>
             <th>
-                @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NextSortOrder, sortItem = "name", selectType = ViewBag.SelectType})
+                @Html.ActionLink("Name", "Index", new { sortOrder = ViewBag.NextSortOrder, sortItem = "name", selectType = ViewBag.SelectType })
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Type)
@@ -51,11 +56,32 @@ new { onchange = $"document.location.href = '/Products?sortOrder={ViewBag.NextSo
                     @Html.DisplayFor(modelItem => item.Available)
                 </td>
                 <td>
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
-                    @if (User.Identity.IsAuthenticated)
+                    @if (item.GetType().Name == "Drink")
                     {
-                        <a>| </a> <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-                        <a>| </a> <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a asp-action="DetailsDrink" asp-route-id="@item.Id">Details</a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a>| </a> <a asp-action="EditDrink" asp-route-id="@item.Id">Edit</a>
+                            <a>| </a> <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        }
+                    }
+                    else if (item.GetType().Name == "Food")
+                    {
+                        <a asp-action="DetailsFood" asp-route-id="@item.Id">Details</a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a>| </a> <a asp-action="EditFood" asp-route-id="@item.Id">Edit</a>
+                            <a>| </a> <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        }
+                    }
+                    else
+                    {
+                        <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a>| </a> <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                            <a>| </a> <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        }
                     }
                 </td>
             </tr>
