--- a/Views/Products/DetailsFood.cshtml
+++ b/Views/Products/DetailsFood.cshtml
@@ -1,4 +1,4 @@
-﻿@model Databases_2_Project2_Grocery_store.Models.Product
+﻿@model Databases_2_Project2_Grocery_store.Models.Food
 
 @{
     ViewData["Title"] = "Details";
@@ -7,7 +7,7 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Product</h4>
+    <h4>Food</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
@@ -21,6 +21,12 @@
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Type)
+        </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Weight)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Weight) Kg
         </dd>
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
@@ -37,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
+    <a asp-action="EditFood" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
